# chattelite

./: .gitignore  LICENSE  Makefile  README.md  api.opam  config.json  dune-project  recreate_db.sh  vscode.code-workspace
api_documentation/: README.md
api_documentation/client/: README.md
api_documentation/server/: README.md
app/: auth.ml  config.ml  dune  home.eml  main.ml
backend/api/: .gitignore  Cargo.toml  chattelite-server.toml
backend/api/src/: config.rs  errors.rs  generated.rs  main.rs
backend/api/src/handlers/: mod.rs
backend/api/src/handlers/app/: mod.rs
backend/api/src/handlers/client/: mod.rs
backend/api/src/handlers/server/: mod.rs
backend/api/src/realtime/: broadcast.rs  mod.rs
backend/api/src/session/: app.rs  client.rs  mod.rs
backend/api/tests/: test.html  test.sh
backend/db_models/: .env  Cargo.toml
backend/db_models/src/: lib.rs  update_builder.rs
codegen/: build.sh  client_endpoints.ml  dune  endpoints.ml  gen_ocaml.ml  gen_typescript.ml  install.sh  main.ml  server_endpoints.ml  server_types.ml  t.ml  types.ml
codegen/api/: index.ts  package-lock.json  package.json  tsconfig.json
codegen/db/: index.ts  package-lock.json  package.json  tsconfig.json
db/: .gitignore  index.ts  package.json  recreate_db.sh  tsconfig.json
deb/DEBIAN/: control
examples/sveltekit/: package-lock.json  package.json
examples/ts-app-ts-client/: index.ts  package-lock.json  package.json
frontend/: generated_types.ts  types.ts
lib/: db.ml  dune  graphql_api.ml  pagination.ml
lib/api/: api_types.ml  app_endpoints.ml  app_handlers.ml  auth.ml  client_endpoints.ml  client_handlers.ml  client_types.ml  config.ml  context.ml  db.ml  dune  endpoints.ml  generated_api.ml  generated_client_endpoints.ml  generated_client_types.ml  generated_endpoints.ml  generated_server_endpoints.ml  generated_server_types.ml  handler.ml  handlers.ml  pagination.ml  server_endpoints.ml  server_sent_events.ml  types.ml
lib/db/: conversation.ml  db_schema.ml  dune  user.ml  utils.ml
lib/gen_endpoints/: dune  gen_documentation.ml  gen_ocaml_endpoints.ml  gen_ts_bindings.ml  types.ml
lib/gen_types/: dune  gen_documentation.ml  gen_ocaml.ml  gen_typescript.ml  types.ml  utils.ml
lib/ppx_deriving_query/: dune  ppx_deriving_query_parser.ml
migrations/: dune  migrations.ml
package/jsonwebtoken/: dune  jwt.ml  jwt.mli
scripts/: build-deb-package.sh
test/: dune
tests/ts-app-ts-client/: index.ts  package-lock.json  package.json  (+2 more)
typescript_bindings/: types.ts
(+101 files in other folders)
